rust/node-structuring/tests/snapshots/examples__headings-to-paragraphs-normal.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Proper Heading"
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 2,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Another Valid Heading"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "These headings are properly formatted - short, in title case, no punctuation - and should remain as headings."
          }
        }
      ]
    }
  ]
}
