rust/node-structuring/tests/snapshots/examples__headings-to-paragraphs-punctuated.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading ends with a period and should be converted to a paragraph."
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading ends with a question mark and should be converted?"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading ends with an exclamation and should be converted!"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading has no punctuation and should remain a heading"
          }
        }
      ]
    }
  ]
}
