rust/node-structuring/tests/snapshots/examples__headings-to-sections-mixed.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This content before any headings should remain outside of sections."
          }
        }
      ]
    },
    {
      "type": "Section",
      "content": [
        {
          "type": "Heading",
          "level": 2,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Subsection Without Parent"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "This subsection has no parent h1 heading and should create its own section."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "content": [
        {
          "type": "Heading",
          "level": 1,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Main Section"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "This content should be wrapped in a section with the Main Section heading."
              }
            }
          ]
        },
        {
          "type": "Section",
          "content": [
            {
              "type": "Heading",
              "level": 2,
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Nested Subsection"
                  }
                }
              ]
            },
            {
              "type": "Paragraph",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "This should be nested within the Main Section."
                  }
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
