rust/node-structuring/tests/snapshots/examples__headings-to-sections-nested.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Section",
      "sectionType": "Introduction",
      "content": [
        {
          "type": "Heading",
          "level": 1,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Introduction"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "This content should be wrapped in a section with the Introduction heading."
              }
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "sectionType": "Methods",
      "content": [
        {
          "type": "Heading",
          "level": 1,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Methods"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "This content should be in a top-level methods section despite the heading being level 2 because the Methods section is a primary section."
              }
            }
          ]
        },
        {
          "type": "Section",
          "content": [
            {
              "type": "Heading",
              "level": 3,
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "Data Collection"
                  }
                }
              ]
            },
            {
              "type": "Paragraph",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "This sub-subsection should be nested within the Methods section."
                  }
                }
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Section",
      "sectionType": "Results",
      "content": [
        {
          "type": "Heading",
          "level": 1,
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "Results"
              }
            }
          ]
        },
        {
          "type": "Paragraph",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "This content should be in a separate top-level section."
              }
            }
          ]
        }
      ]
    }
  ]
}
