rust/node-structuring/tests/snapshots/examples__headings-to-title-h1.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "This heading should become the title"
      }
    }
  ],
  "content": [
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading should remain a heading"
          }
        }
      ]
    }
  ]
}
