rust/node-structuring/tests/snapshots/examples__headings-to-title-h3.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Heading",
      "level": 3,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This heading should NOT become the title because it is level 3"
          }
        }
      ]
    }
  ]
}
