rust/node-structuring/tests/snapshots/examples__math-to-citations-parenthetic.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "The relationship "
          }
        },
        {
          "type": "MathInline",
          "code": {
            "string": "F = (ma)"
          },
          "mathLanguage": "tex"
        },
        {
          "type": "Text",
          "value": {
            "string": " is fundamental. But "
          }
        },
        {
          "type": "Citation",
          "target": "ref-1",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "1"
              }
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-3",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "3"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-5",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "5"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-6",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "6"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-7",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "7"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": ", and "
          }
        },
        {
          "type": "CitationGroup",
          "items": [
            {
              "type": "Citation",
              "target": "ref-9",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "9"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-10",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "10"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-11",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "11"
                  }
                }
              ]
            },
            {
              "type": "Citation",
              "target": "ref-12",
              "content": [
                {
                  "type": "Text",
                  "value": {
                    "string": "12"
                  }
                }
              ]
            }
          ]
        },
        {
          "type": "Text",
          "value": {
            "string": " are treated as parenthetic citations in math expressions."
          }
        }
      ]
    }
  ]
}
